--- a/woo-vipps/payment/src/Blocks/package.json
+++ b/woo-vipps/payment/src/Blocks/package.json
@@ -6,7 +6,8 @@
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start --webpack-copy-php --output-path=../../Blocks/dist"
+		"start": "wp-scripts start --webpack-copy-php --output-path=../../Blocks/dist",
+		"type-check": "tsc --noEmit --pretty"
 	},
 	"devDependencies": {
 		"@types/wordpress__block-editor": "^11.5.15",
@@ -18,7 +19,8 @@
 		"typescript": "^5.6.3"
 	},
 	"dependencies": {
-		"@wordpress/interactivity": "^6.12.0"
+		"@wordpress/api-fetch": "^7.38.0",
+		"@wordpress/interactivity": "^6.12.0",
+		"@wordpress/url": "^4.38.0"
 	}
 }
-
